--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,24 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
-
+    compileSdk 34
+    buildToolsVersion '33.0.1'
+    namespace "com.jwell.suite"
+    sourceSets {
+              main.manifest.srcFile 'src/main/AndroidManifest.xml'
+        main.java.srcDirs = ['java','src/main/java']
+        main.aidl.srcDirs = ['java']
+        main.res.srcDir'res'
+        main.assets.srcDir 'assets'
+        main.res.srcDir 'files'
+        main.resources.srcDir 'java'
+        test.setRoot('javatests')
+        test.java.srcDir('javatests')
+    }
     defaultConfig {
         applicationId "com.jwell.suite"
-        minSdkVersion 24
-        targetSdkVersion 30
+        minSdkVersion 28
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -30,7 +41,7 @@ android {
 }
 
 configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+    resolutionStrategy.eachDependency {  details ->
         def requested = details.requested
         if (requested.group == "androidx") {
             if (!requested.name.startsWith("multidex")) {
@@ -41,12 +52,21 @@ configurations.all {
 }
 dependencies {
     implementation group: 'com.google.zxing', name: 'core', version: '3.4.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.gms:play-services-vision:11.8.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'com.google.code.gson:gson:2.2.4'
+    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
