--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera.autofocus"
@@ -24,32 +26,37 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JwellSuite">
+        android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
+        android:theme="@style/Theme.JwellSuite"
+        android:name="com.jwell.suite.app.BaseApplication">
         <activity android:name=".PopUpActivity"
             android:theme="@style/Theme.JwellSuite.PopUpTheme">
 
         </activity>
         <activity android:name=".ScanReportActivity" />
-        <activity android:name=".ScannedBarcodeActivity" />
+        <activity android:name=".ScannedBarcodeActivity"  />
         <activity android:name=".PictureBarcodeActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".RegisterActivity" />
 		<!-- <activity android:name="com.jwell.util.ParserDocument" /> -->
-        <activity android:name=".MainActivity">
+        <activity
+               android:exported="true"  android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
