--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath 'org.ajoberstar.grgit:grgit-gradle:4.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +19,10 @@ allprojects {
         jcenter()
     }
 }
-
+/*
+task wrapper(type: Wrapper){
+    gradleVersion = '8.1.1'
+}*/
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
